# multi-agent-system-framework

./: .gitignore  README.md  main.py  packages.txt  pyproject.toml
.css/: app_styles.css
agents/: agent.py  agent_config.py  agents.py  graph.py  rag.py  scenario_generator.py  supervisor.py  tools.py
config/: config.py  sample_agent_config.json
core/: app.py  event_manager.py  execution.py  state_manager.py  workflow_agent.py
interfaces/: commands.py  streamlit_interface.py  ui_layout.py
modules/: agent.py  app.py  document_loader.py  execution.py  graph.py  rag.py  scenario_generator.py  supervisor.py  tools.py  url_handler.py  utils.py
modules/config/: agent_config.json  app_config.json  config.py
services/: api_service.py  config_service.py  database_service.py  document_service.py  file_service.py  langfuse_service.py  model_service.py  scenario_service.py  url_service.py
utilities/: agent_utils.py  file_utils.py  json_utils.py  setup_utils.py  utils.py
