[tool.poetry]
name = "autorescure-ai"
version = "0.1.0"
description = "A multi-agent system leveraging GPT-4 for aerial search and rescue missions with real-time retrieval-augmented generation, managed by a hierarchical team structure and integrated with a Streamlit UI.."
authors = ["Kenan Agyel <kenanagyel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
streamlit = "^1.37.1"
langchain = "^0.2.14"
langchain-openai = "^0.1.21"
langchain-community = "^0.2.12"
qdrant-client = "^1.11.0"
langgraph = "^0.2.4"
faiss-cpu = "^1.8.0.post1"
python-dotenv = "^1.0.1"
pymupdf = "^1.24.9"
unstructured = "^0.15.5"
pypandoc = "^1.13"
langfuse = "^2.43.3"
langchain-ollama = "^0.1.1"
playwright = "^1.46.0"
beautifulsoup4 = "^4.12.3"
scikit-learn = "^1.5.1"
newspaper3k = "^0.2.8"
undetected-playwright = "^0.3.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
